--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Configuration Start: Please customize following configuration -->
-        <title>布丁布丁吃什麼？</title>
+        <title>布丁布丁吃什麼？lo_20210603測試中</title>
         <!-- Configuration End -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +15,8 @@
                 <img src="spin.svg" />
                 <div>
                     <!-- Configuration Start: Please customize following configuration -->
-                    <h1>布丁布丁吃什麼？</h1>
-                    <div class="description"><span>我不是在實驗室<br />就是在前往實驗室的路上</span></div>
+                    <h1>布丁布丁吃什麼？lo_20210603測試中</h1>
+                    <div class="description"><span>我不是在家中<br />就是在前往防疫的路上</span></div>
                     <!-- Configuration End -->
                 </div>
             </div>
@@ -26,7 +26,7 @@
 <p>
 <span class="blog-copyright">
     <!-- Configuration Start: Please customize following configuration -->
-    © Copyright 2017 <a href="http://blog.pulipuli.info/">布丁布丁吃什麼？</a>
+    © Copyright 2021 <a href="http://web.ntnu.edu.tw/~fanchen/1092final">布丁布丁吃什麼？lo_20210603測試中</a>
     <!-- Configuration End -->
 </span>
 </p>
